Fix visual problems in admin with merge

--- a/app/assets/stylesheets/layouts/header.sass
+++ b/app/assets/stylesheets/layouts/header.sass
@@ -38,7 +38,7 @@
     width: 1140px
     margin-top: -81px
     background: $pink-25
-    .profile-info
+    .user-info
       width: 227px
       left: - 15px
       height: 100px
