Add styles for users list

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -49,6 +49,7 @@
     padding-left: 0
     padding-right: 0
   nav .nav
+    border-bottom: 1px solid $gray
     a
       width: 150px
       float: left
@@ -82,3 +83,23 @@
       position: relative
       width: 35px
 
+.admin-users-list
+  margin-top: -20px
+  header
+    height: 70px
+    border-bottom: 1px solid $pink-50
+    h1
+      font-size: 20px
+      font-style: normal
+      font-family: roboto
+      color: #aa392d
+      margin-left: 10px
+      font-weight: 100
+      position: relative
+      top: 24px
+  table
+    tbody
+      background: #fff
+    img
+      border-radius: 80px
+      width: 40px
