--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -1,5 +1,3 @@
-
-
 -#= link_to 'Users', admin_users_path
 -#|
 -#= link_to 'Badges', badges_engine.badges_path
@@ -29,7 +27,7 @@
             .user-admin-icon
             .carpet-down
         %li
-          = link_to '#' do
+          = link_to badges_engine.badges_path do
             %p Badges
             .badge-admin-icon
             .carpet-down
