--- a/app/views/admin/users/_user_list.html.haml
+++ b/app/views/admin/users/_user_list.html.haml
@@ -1,5 +1,12 @@
-%h1 Users
+.admin-users-list
+  %header
+    %h1 Manage Users
 
-%table.table.table-striped
-  %tbody
-    = render partial: 'shared/user', collection: @users
+
+  %table.table
+    %tbody
+      %tr
+        %th Name    
+        %th Role
+        %th Manage Module
+      = render partial: 'shared/user', collection: @users
