--- a/app/views/shared/_user.html.haml
+++ b/app/views/shared/_user.html.haml
@@ -1,4 +1,7 @@
 %tr
-  %td= user.name
-  %td= link_to 'Show', user_path(user)
+  %td
+    = image_tag user.picture_url
+    = link_to user_path(user) do
+      = user.name
+  %td= user.position_name
   %td= link_to 'Edit', edit_user_path(user)
