--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -86,6 +86,7 @@
 .admin-users-list
   margin-top: -20px
   header
+    background: #f8f8f8
     height: 70px
     border-bottom: 1px solid $pink-50
     h1
@@ -98,8 +99,14 @@
       position: relative
       top: 24px
   table
+    tbody > tr > th
+      background: #f8f8f8
+      padding: 15px
     tbody
       background: #fff
+    tbody tr td
+      height: 70px
+      vertical-align: middle
     img
       border-radius: 80px
       width: 40px
