Order attributes alphabetically

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -1,10 +1,10 @@
 .admin-settings-header
   background: #fff
-  height: 70px
   border-bottom: 1px solid $pink-50
+  height: 70px
   .left-side
-    width: 50%
     float: left
+    width: 50%
     .admin-settings-logo
       background: url(/assets/sprite-badges.png) -82px -577px
       float: left
@@ -12,36 +12,36 @@
       margin: 0 5px 0 0
       width: 70px
     h1
+      color: #aa392d
+      font-family: roboto
       font-size: 20px
       font-style: normal
-      font-family: roboto
-      color: #aa392d
-      margin-top: 22px
-      margin-left: 50px
       font-weight: 100
+      margin-left: 50px
+      margin-top: 22px
     p
-      position: relative
-      left: 142px
-      top: -15px
-      font-size: 85%
       color: $gray-25
+      font-size: 85%
+      left: 142px
+      position: relative
+      top: -15px
   .right-side
-    width: 50%
     float: right
+    width: 50%
     a
       color: #aa392d
-      margin-top: 22px
       float: right
-      margin-right: 50px
-      font-weight: bold
       font-family: roboto
+      font-weight: bold
+      margin-right: 50px
+      margin-top: 22px
   .mid-flag-corner
     background: url(/assets/sprite-badges.png) -12px -796px
-    top: -40px
     float: right
     height: 67px
     left: 20px
     position: relative
+    top: -40px
     width: 50px
 
 .admin-settings-control
@@ -51,23 +51,23 @@
   nav .nav
     border-bottom: 1px solid $gray
     a
-      width: 150px
       float: left
       height: 68px
+      width: 150px
       &:active, &:hover
         background: #fff
         .carpet-down
-          width: 0
-          height: 0
           border-left: 10px solid transparent
           border-right: 10px solid transparent
           border-top: 10px solid #fff
-          position: relative
           bottom: 10px
+          height: 0
           margin: 0 auto
+          position: relative
+          width: 0
       p
-        text-align: center
         margin-top: 14px
+        text-align: center
     .user-admin-icon
       background: url(/assets/sprite-badges.png) -11px -1128px
       bottom: 28px
@@ -87,17 +87,45 @@
   margin-top: -20px
   header
     background: #f8f8f8
-    height: 70px
     border-bottom: 1px solid $pink-50
+    height: 70px
     h1
+      color: #aa392d
+      font-family: roboto
       font-size: 20px
       font-style: normal
-      font-family: roboto
-      color: #aa392d
-      margin-left: 10px
       font-weight: 100
+      margin-left: 10px
       position: relative
       top: 24px
+      width: 50%
+    form
+      float: right
+      margin-right: 50px
+      width: 300px
+      input
+        background: rgb(239, 238, 238)
+        border-radius: 0
+        color: $gray-dark
+        float: left
+        font-family: roboto
+        position: relative
+        width: 175px
+      button
+        background: transparent
+        border: 0
+      .search-glass
+        background: url(/assets/sprite-badges.png) -30px -174px
+        height: 28px
+        position: relative
+        right: 34px
+        top: 2px
+        width: 28px
+    p
+      float: left
+      font-family: roboto
+      margin-top: 8px
+      width: 58px
   table
     tbody > tr > th
       background: #f8f8f8
