Add search field
* Add search functionallity
* Add field html

--- a/app/views/admin/users/_user_list.html.haml
+++ b/app/views/admin/users/_user_list.html.haml
@@ -1,7 +1,7 @@
 .admin-users-list
   %header
     %h1 Manage Users
-
+    = render partial: 'search', locals: {users: @users }
 
   %table.table
     %tbody
