Improve css images with image_url

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -6,7 +6,7 @@
     float: left
     width: 50%
     .admin-settings-logo
-      background: url(/assets/sprite-badges.png) -82px -577px
+      background: image_url('/assets/sprite-badges.png') -82px -577px
       float: left
       height: 70px
       margin: 0 5px 0 0
@@ -36,7 +36,7 @@
       margin-right: 50px
       margin-top: 22px
   .mid-flag-corner
-    background: url(/assets/sprite-badges.png) -12px -796px
+    background: image_url('/assets/sprite-badges.png') -12px -796px
     float: right
     height: 67px
     left: 20px
@@ -69,14 +69,14 @@
         margin-top: 14px
         text-align: center
     .user-admin-icon
-      background: url(/assets/sprite-badges.png) -11px -1128px
+      background: image_url('/assets/sprite-badges.png') -11px -1128px
       bottom: 28px
       height: 35px
       left: 0px
       position: relative
       width: 35px
     .badge-admin-icon
-      background: url(/assets/sprite-badges.png) -11px -1168px
+      background: image_url('/assets/sprite-badges.png') -11px -1168px
       bottom: 28px
       height: 35px
       left: 0px
@@ -115,7 +115,7 @@
         background: transparent
         border: 0
       .search-glass
-        background: url(/assets/sprite-badges.png) -30px -174px
+        background: image_url('/assets/sprite-badges.png') -30px -174px
         height: 28px
         position: relative
         right: 34px
