--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -51,8 +51,8 @@
           %span.badges-header-image
           %span.badges-title My Badges
         %ul.badges-menu
-          %li= link_to 'Check all my badges', '#', class: 'badges-check-personal'
-          %li= link_to 'Check all badges', '#', class: 'badges-check-all'
+          %li= link_to 'Check all my badges', '#', class: 'badges-first-link'
+          %li= link_to 'Check all badges', badges_path, class: 'badges-last-link'
         .badges-header-decorator
     .row
       .badges-all
