[https://trello.com/c/bxoTWSmi/64-1-adds-styles-for-show-all-badges]
* Updates sprite badges
* Adds new colors
* Adds search form module
* Updates badges modules and main app

--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -2,7 +2,9 @@ $gray-dark: #282928
 $gray-25: #A5A2A2
 $gray: #EDEDED
 $gray-light: #939393
+$gray-lighter: #F8F8F8
 
+$orange-light: #F7BE7B
 $orange: #D44928
 $orange-dark: #AA392D
 
@@ -12,4 +14,4 @@ $pink-25: #EBA299
 
 $yellow: #EF911F
 
-$white: #fff
+$white: #FFF
