[https://trello.com/c/bxoTWSmi/64-1-adds-styles-for-show-all-badges]
* Created badges helper file for show
* Adds helper method to badges#index view

--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -5,7 +5,9 @@
         %h3.badges-header
           %span.badges-header-image
           %span.badges-title All badges
-        %span.badges-count 102/200 Badges earned
+        %span.badges-count
+          = badge_totals
+          Badges earned
         %ul.badges-menu
           %li= link_to 'Back to my Badges', '#', class: 'badges-first-link'
           %li
