[https://trello.com/c/bxoTWSmi/64-1-adds-styles-for-show-all-badges]
* Adds specs for badge controller
* Adds specs for badge helper
* Fix index and badge helper

--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -6,7 +6,7 @@
           %span.badges-header-image
           %span.badges-title All badges
         %span.badges-count
-          = badge_totals
+          = badge_totals(current_user)
           Badges earned
         %ul.badges-menu
           %li= link_to 'Back to my Badges', '#', class: 'badges-first-link'
