Change colors for row borders

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -101,7 +101,7 @@
       width: 50%
     form
       float: right
-      margin-right: 50px
+      margin-right: 89px
       width: 300px
       input
         background: rgb(239, 238, 238)
@@ -126,6 +126,15 @@
       font-family: roboto
       margin-top: 8px
       width: 58px
+    a
+      float: right
+      position: relative
+      text-align: center
+      left: 389px
+      padding: 7px 20px
+      background: $pink-50
+      bottom: 0px
+      color: #fff
   table
     tbody > tr > th
       background: #f8f8f8
@@ -133,6 +142,7 @@
     tbody
       background: #fff
     tbody tr td
+      border-top: 1px solid $pink-50
       height: 70px
       vertical-align: middle
     img
