Show all my badges
* Removes user links module
* Adds path to some links
* Fix some style issues

--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -44,7 +44,7 @@
     border-right: 1px solid $gray-light
     float: left
     padding: 0 15px
-    &:last-child
+    &.last
       border: none
       padding-right: 0px
 
