--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -10,7 +10,7 @@
           Badges earned
         %ul.badges-menu
           %li= link_to 'Back to my Badges', '#', class: 'badges-first-link'
-          %li
+          %li.last
             = link_to 'Back to my Dashboard', user_path(current_user),
               class: 'badges-last-link'
           .badges-header-decorator
@@ -27,9 +27,9 @@
             = text_field_tag :sort, params[:search],
               class: 'search-form-control'
           %p.search-proposals
-            = link_to 'Nominate someone', '#',
+            = link_to 'Nominate someone', new_nominee_user_path,
               class: 'search-proposals-nominate'
-            = link_to 'Propose a badge', '#',
+            = link_to 'Propose a badge', new_propose_badge_path,
               class: 'search-proposals-propose'
       %section
         .badges-all
