--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -43,7 +43,9 @@
           %span.badges-header-image
           %span.badges-title My Badges
         %ul.badges-menu
-          %li= link_to 'Check all my badges', '#', class: 'badges-first-link'
+          %li
+            = link_to 'Check all my badges', badges_user_path(@user),
+              class: 'badges-first-link'
           %li.last
             = link_to 'Check all badges', badges_path,
               class: 'badges-last-link'
