Show all my badges
* Adds helper methods in application helper
* Moves user helper methods to application helper
* move badge partial form users to shared
* Add helper method to many views

--- a/app/views/users/my_badges.html.haml
+++ b/app/views/users/my_badges.html.haml
@@ -29,11 +29,7 @@
               class: 'search-proposals-propose'
       %section
         .badges-all
-          - @badges.each do |badge|
-            .badge-info-6-col
-              = image_tag 'no-image.svg'
-              .badge-name
-                = badge.name
+          = show_badges
       %footer.badges-footer-separator
         %p
           Total
