--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -9,18 +9,8 @@
 
 // Layouts
 
-
-@import 'layouts/header'
-@import 'layouts/content'
-@import 'layouts/footer'
+@import 'layouts/*'
 
 // Modules
 
-@import 'modules/circle'
-@import 'modules/google_sign_in'
-@import 'modules/logos'
-@import 'modules/badges'
-@import 'modules/profile'
-@import 'modules/welcome'
-@import 'modules/admin'
-@import 'modules/search_form'
+@import 'modules/*'
