Move views from admin to badge_engine

--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -27,7 +27,7 @@
             .user-admin-icon
             .carpet-down
         %li
-          = link_to admin_badges_path do
+          = link_to badges_engine.badges_path do
             %p Badges
             .badge-admin-icon
             .carpet-down
