Badge show details

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -148,3 +148,40 @@
     img
       border-radius: 80px
       width: 40px
+.badge-details
+  h5
+    font-weight: bold
+  h2
+    font-size: 40px
+    color: #000
+    font-weight: 200
+    text-transform: capitalize
+    margin-top: 25px
+  .col-md-4
+    margin: -8px
+  .span4 img
+    border-radius: 0
+    width: 100%
+    position: relative
+    right: 15px
+  .row
+    height: 80px
+    border-bottom: 1px solid $pink-50
+    margin-left: 0
+    margin-right: 0
+  .action-show-details
+    margin-top: 35px
+    a:last-child
+      float: right
+  section
+    .value-side
+      width: 50%
+      float: left
+    .award-side
+      width: 50%
+      float: right
+    height: 70px
+    border-bottom: 1px dashed $gray
+    &:last-child
+      height: 40px
+      border-bottom: none
