--- a/app/views/badges_engine/badges/_details.html.haml
+++ b/app/views/badges_engine/badges/_details.html.haml
@@ -1,8 +1,26 @@
 %td{ colspan: 5}
-  = image_tag badge.image_url
-  = badge.name
-  = link_to 'Edit badge', badges_engine.edit_badge_path(badge)
-  = badge.description
-  = badge.award.title unless badge.award.nil?
-  = badge.value.name unless badge.value.nil?
-  = render badge.levels
+  .row
+    .col-md-4
+      .span4= image_tag badge.image_url
+    .col-md-8
+      .span8
+        .row
+          .col-md-4
+            %h2= badge.name
+          .col-md-8
+            .action-show-details
+              = link_to 'Edit badge', badges_engine.edit_badge_path(badge)
+              = link_to 'Show Less', '#',class: 'js-show-less'
+        %section
+          %h5 Description:
+          = badge.description
+        %section
+          .value-side
+            %h5 Values:
+            = badge.value.name unless badge.value.nil?
+          .award-side
+            %h5 Award:
+            = badge.award.title unless badge.award.nil?
+        %section
+          %h5 Path:
+          = render badge.levels
