Wip badges details

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -185,3 +185,29 @@
     &:last-child
       height: 40px
       border-bottom: none
+    li
+      list-style: none
+      text-align: center
+      width: 25px
+      height: 18px
+      p
+        width: 23px
+        color: black
+      p:first-child
+        color: #fff
+        background: pink
+        border-radius: 80px
+        margin-bottom: 2px
+      p:last-child
+        position: relative
+        left: 34px
+        bottom: 22px
+    span
+      border-left: 1px solid pink
+      width: 3px
+      height: 7px
+      position: relative
+      left: 11px
+      display: block
+      &:last-child
+        border-left: none
