--- a/app/views/badges_engine/badges/_details.html.haml
+++ b/app/views/badges_engine/badges/_details.html.haml
@@ -1,7 +1,7 @@
 %td{ colspan: 5}
   .row
     .col-md-4
-      .span4= image_tag badge.image_url
+      .span4= image_badge(badge)
     .col-md-8
       .span8
         .row
@@ -23,4 +23,5 @@
             = badge.award.title unless badge.award.nil?
         %section
           %h5 Path:
-          = render badge.levels
+          %ul
+            = render badge.levels unless badge.levels.nil?
