--- a/app/views/badges_engine/badges/_level_fields.html.haml
+++ b/app/views/badges_engine/badges/_level_fields.html.haml
@@ -1,7 +1,6 @@
 .nested-fields
-  .col-sm-6
-    .col-sm-6
-      = f.input :tier, collection: 1..5
-    .col-sm-6
-      = f.input :badge_alias
-  = link_to_remove_association "x", f
+  %ul
+    %li= f.input :tier, collection: 1..5, label: false
+    %li
+      = f.input :badge_alias, label: false
+      = link_to_remove_association 'X', f
