Wip adding styles

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -247,7 +247,13 @@
       width: 75%
   .actions
     float: right
-
+  .btn
+    background: $pink-25
+    border: 0
+    width: 100px
+    color: #fff
+  .btn-disabled
+    opacity: 0.65
   form
     input
       background: rgb(239, 238, 238)
@@ -255,6 +261,7 @@
       color: $gray-dark
       font-family: roboto
       width: 175px
+      border: 1px solid #535553
     select
       @extend input
       width: 175px
