Use single quotes for simple strings

--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -15,7 +15,7 @@
     %h1 Admin settings
     %p Choose a module to continue
   .right-side
-    = link_to "Back to my profile Dasboard", logo_redirect_url
+    = link_to 'Back to my profile Dasboard', logo_redirect_url
   .mid-flag-corner
 .admin-settings-control
   %nav.navbar.navbar-default
