--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -1,10 +1,7 @@
 !!!
 %html
   %head
-    %title KardexCrowdintCom
-    = stylesheet_link_tag    'application', media: 'all'
-    = javascript_include_tag 'application'
-    = csrf_meta_tags
+    = render 'layouts/head'
   %body
     %header.header.header-home
       .header-right
