Adding missing styles

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -54,6 +54,7 @@
       float: left
       height: 68px
       width: 150px
+      color: #000
       &:active, &:hover
         background: #fff
         .carpet-down
