--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -36,12 +36,12 @@
     %aside.span3.badge-sidebar
       = render partial: 'badge', collection: @badges
   .col-md-9
-    .span9.badge-sidebar
+    .span9.badge-presenter
       .row
         .col-md-12
           .badge-presenter-image
             = image_tag 'no-image.svg'
-          .badge-presenter
+          .badge-presenter-info
             %h1.badge-presenter-title= @badge.name
             %strong Description:
             %p= @badge.description
@@ -50,8 +50,19 @@
             %p= show_value(@badge.value)
             %hr.badge-presenter-separator
             %strong Path:
-    .span9
-      %h3 Who else has it?
-      %p
-        = pluralize(@badge.users.count, 'Crowdie')
-        have earn this badge
+    .span9.badge-winners
+      %header.badge-winners-header
+        %h3.badge-winners-title Who else has it?
+        %p.badge-winners-description
+          = pluralize(@badge.users.count, 'Crowdie')
+          have earn this badge
+      %section.badge-winners-users
+        - @badge.users.each do |user|
+          .badge-winners-user
+            = image_tag user.picture_url, size: '100x100',
+              class: 'badge-winners-user-image'
+            %strong.badge-winners-user-name= user.name
+.row
+  .col-md-12
+    %footer.badges-footer-badge
+      .badges-footer-icon
