--- a/app/assets/stylesheets/modules/badge-presenter.sass
+++ b/app/assets/stylesheets/modules/badge-presenter.sass
@@ -1,8 +1,12 @@
+.badge-presenter
+  background: $white
+  margin-bottom: 15px
+
 .badge-presenter-image
   float: left
   width: 55%
 
-.badge-presenter
+.badge-presenter-info
   float: right
   padding: 0 20px
   width: 45%
