--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -88,6 +88,12 @@
   position: relative
   text-align: center
 
+.badges-footer-badge
+  @extend .badges-footer
+  background-color: $white
+  margin-bottom: 15px
+  padding: 25px
+
 .badges-footer-separator
   @extend .badges-footer
   margin-bottom: 30px
