--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -40,7 +40,7 @@
       .row
         .col-md-12
           .badge-presenter-image
-            = image_tag 'no-image.svg'
+            = image_badge(@badge)
           .badge-presenter-info
             %h1.badge-presenter-title= @badge.name
             %strong Description:
