--- a/app/views/shared/_user.html.haml
+++ b/app/views/shared/_user.html.haml
@@ -4,4 +4,7 @@
     = link_to user_path(user) do
       = user.name
   %td= user.position_name
-  %td= link_to 'Edit', edit_user_path(user)
+  %td
+    = link_to 'Edit', edit_user_path(user)
+    |
+    = link_to 'Add Badge', '#'
