--- a/app/assets/stylesheets/modules/profile.sass
+++ b/app/assets/stylesheets/modules/profile.sass
@@ -109,3 +109,28 @@
   right: -41px
   top: -20px
   width: 55px
+
+.user-container
+  background: #fff
+.edit-user-info
+  background: #fff
+  margin-left: 10px
+  h1
+    +roboto-commons
+    color: $orange
+    font-size: 24px
+    margin-bottom: 15px
+    margin-top: 10px
+    text-align: left
+
+  input
+    color: #000
+  textarea
+    @extend input
+  select
+    @extend input
+
+.panel
+  label
+    margin-left: 27px
+    margin-bottom: 10px
