Propose and nominee badge
* Finished markup for badges#index view
* Finished styles for request module

--- a/app/assets/stylesheets/modules/request.sass
+++ b/app/assets/stylesheets/modules/request.sass
@@ -25,7 +25,8 @@
   background: $pink-25
 
 .request-form-propose
-  display: none
+  background: $gray-lighter
+  padding: 25px 15px
 
 .request-nominee-title
   +request-title
