--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -90,32 +90,34 @@
                 - @propose_badge.errors.full_messages.each do |message|
                   %li= message
           .row
-            .col-sm-2
-              = f.label :name
-            .col-sm-10
-              = f.text_field :name
-          .row
-            .col-sm-2
-              = f.label :value_id
-            .col-sm-10
-              = f.collection_select :value_id, BadgesEngine::Value.all,
-                :id, :name, prompt: 'Support Value'
-          .row
-            .col-sm-2
-              = f.label :description
-            .col-sm-10
-              = f.text_area :description
-          .row
-            .col-sm-2
-              = f.label :users
-            .col-sm-10
-              = f.collection_check_boxes :user_ids, User.all, :id, :name do |b|
-                %div
-                  = b.check_box
-                  = b.label
-          .row
-            .col-sm-12
-              = f.submit
+            .col-sm-4
+              .span4
+                = f.label :name, 'Name your Badge', class: 'request-form-label'
+                = f.text_field :name, class: 'request-form-input',
+                  placeholder: 'Badgename'
+            .col-sm-3
+              .span3
+                = f.label :value_id, 'Tag to a Value',
+                  class: 'request-form-label'
+                = f.collection_select :value_id, BadgesEngine::Value.all,
+                  :id, :name, { prompt: 'Select a value' },
+                  { class: 'request-form-input' }
+            .col-sm-5
+              .span5
+                = f.label :description, 'Describe your Badge',
+                  class: 'request-form-label'
+                = f.text_field :description, class: 'request-form-input',
+                  placeholder: 'Description'
+          .row.request-form-options
+            .col-sm-8
+              .span8
+                %p
+                  do you know who deserves it?
+                  = link_to 'Nominate someone', '#', class: 'request-link'
+            .col-sm-4
+              .span4
+                = f.submit 'Create', class: 'request-btn-submit'
+                = link_to 'Cancel', '#', class: 'request-btn-cancel'
       -#%p AQUI TERMINA!!!
       %section
         .badges-all
