Propose and nominee badge
* Creates nominee user partial
* Creates propose badge partial
* Remove html related with nomimee and propose partials
* Adds renders in index and show badges view
* Updates badges controller to initialize instance variables

--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -31,6 +31,8 @@
               class: 'search-proposals-nominate'
             = link_to 'Propose a badge', new_propose_badge_path,
               class: 'search-proposals-propose'
+      = render partial: 'shared/nominee_user'
+      = render partial: 'shared/propose_badge'
 .row
   .col-md-3
     %aside.span3.badge-sidebar
