--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -33,92 +33,8 @@
               class: 'search-proposals-nominate'
             = link_to 'Propose a badge', new_propose_badge_path,
               class: 'search-proposals-propose'
-      %section.request-nominee
-        %h3.request-nominee-title Nominating someone
-      -#%p AQUI INICIA!!!
-      %section.request-form-nominee
-        = form_for @nominee_user do |f|
-          .row
-            - if @nominee_user.errors.any?
-              %h2
-                = pluralize(@nominee_user.errors.count, 'error')
-                prohibited this field to be saved.
-              %ul
-                - @nominee_user.errors.full_messages.each do |message|
-                  %li= message
-          .row
-            .col-sm-4
-              .span4
-                = f.label :badge_id, 'Choose a Badge',
-                  class: 'request-form-label'
-                = f.collection_select :badge_id,
-                  BadgesEngine::Badge.all, :id, :name,
-                  { prompt: 'Badgename' },
-                  { class: 'request-form-input' }
-            .col-sm-3
-              .span3
-                = f.label :user_id, 'Who deserves it', class: 'request-form-label'
-                = f.collection_select :user_id, User.all, :id,
-                  :name, { prompt: 'Username' },
-                  { class: 'request-form-input' }
-            .col-sm-5
-              .span5
-                = f.label :why, 'Why?', class: 'request-form-label'
-                = f.text_field :why, class: 'request-form-input', placeholder: 'Reasons'
-          .row.request-form-options
-            .col-sm-8
-              .span8
-                %p
-                  Can't find the badge?
-                  = link_to 'Propose a new one', '#', class: 'request-link'
-            .col-sm-4
-              .span4
-                = f.submit 'Nominate', class: 'request-btn-submit'
-                = link_to 'Cancel', '#', class: 'request-btn-cancel'
-      -#%p AQUI TERMINA!!!
-      -#%p AQUI INICIA!!!
-      %section.request-propose
-        %h3.request-propose-title Proposing a new Badge
-      %section.request-form-propose
-        = form_for @propose_badge do |f|
-          .row
-            - if @propose_badge.errors.any?
-              %h2
-                = pluralize(@propose_badge.errors.count , 'error')
-                prohibted this field to be saved
-              %ul
-                - @propose_badge.errors.full_messages.each do |message|
-                  %li= message
-          .row
-            .col-sm-4
-              .span4
-                = f.label :name, 'Name your Badge', class: 'request-form-label'
-                = f.text_field :name, class: 'request-form-input',
-                  placeholder: 'Badgename'
-            .col-sm-3
-              .span3
-                = f.label :value_id, 'Tag to a Value',
-                  class: 'request-form-label'
-                = f.collection_select :value_id, BadgesEngine::Value.all,
-                  :id, :name, { prompt: 'Select a value' },
-                  { class: 'request-form-input' }
-            .col-sm-5
-              .span5
-                = f.label :description, 'Describe your Badge',
-                  class: 'request-form-label'
-                = f.text_field :description, class: 'request-form-input',
-                  placeholder: 'Description'
-          .row.request-form-options
-            .col-sm-8
-              .span8
-                %p
-                  do you know who deserves it?
-                  = link_to 'Nominate someone', '#', class: 'request-link'
-            .col-sm-4
-              .span4
-                = f.submit 'Create', class: 'request-btn-submit'
-                = link_to 'Cancel', '#', class: 'request-btn-cancel'
-      -#%p AQUI TERMINA!!!
+      = render partial: 'shared/nominee_user'
+      = render partial: 'shared/propose_badge'
       %section
         .badges-all
           = show_badges
