--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -21,13 +21,15 @@
           %p.search-info
             %span.search-earned-ico
             %span.search-earned Earned
-          = form_tag(badges_query_path, method: :get, class: 'search-form') do
+          = form_tag(badges_path, method: :get, class: 'search-form') do
             = label_tag :search, 'Search', class: 'search-form-label'
             = text_field_tag :search, params[:search],
               class: 'search-form-control'
+            = button_tag "Search", :name => nil, class: 'hide'
             = label_tag :sort, 'Sort by:', class: 'search-form-label'
             = text_field_tag :sort, params[:search],
               class: 'search-form-control'
+            = button_tag "Sort", :name => nil, class: 'hide'
           %p.search-proposals
             = link_to 'Nominate someone', new_nominee_user_path,
               class: 'search-proposals-nominate'
