Propose and nominee badge
* Adds js file to toggle elements
* Fix styles

--- a/app/assets/stylesheets/modules/request.sass
+++ b/app/assets/stylesheets/modules/request.sass
@@ -16,17 +16,21 @@
 
 .request-nominee
   background: $orange-light
+  display: none
 
 .request-form-nominee
   background: $gray-lighter
   padding: 25px 15px
+  display: none
 
 .request-propose
   background: $pink-25
+  display: none
 
 .request-form-propose
   background: $gray-lighter
   padding: 25px 15px
+  display: none
 
 .request-nominee-title
   +request-title
