--- a/app/views/badges_engine/badges/_badge.html.haml
+++ b/app/views/badges_engine/badges/_badge.html.haml
@@ -1,6 +1,6 @@
 %tr
   %td
-    = image_badge(badge)
+    = image_tag badge.image_url
     = badge.name
   %td= badge.description
   %td= badge.award.title unless badge.award.nil?
