--- a/app/views/badges_engine/badges/_details.html.haml
+++ b/app/views/badges_engine/badges/_details.html.haml
@@ -1,7 +1,7 @@
 %td{ colspan: 5}
   .row
     .col-md-4
-      .span4= image_badge(badge)
+      .span4= image_tag badge.image_url
     .col-md-8
       .span8
         .row
