--- a/app/views/shared/_badge.html.haml
+++ b/app/views/shared/_badge.html.haml
@@ -1,4 +1,4 @@
 %div{ class: define_badge_column }
-  = image_badge(badge)
+  = image_tag badge.image_url
   .badge-name
     = link_to badge.name, badge_path(badge)
