--- a/app/views/layouts/dashboards.html.haml
+++ b/app/views/layouts/dashboards.html.haml
@@ -5,7 +5,7 @@
   %body
     .header-dashboards
       .header-vertical-line
-      .circle
+      =link_to '', user_path(current_user), class: 'circle'
       .welcome-image
     = notice
     #content
