--- a/app/views/shared/_propose_badge.html.haml
+++ b/app/views/shared/_propose_badge.html.haml
@@ -1,7 +1,7 @@
 %section.request-propose
   %h3.request-propose-title Proposing a new Badge
 %section.request-form-propose
-  = form_for @propose_badge do |f|
+  = simple_form_for @propose_badge do |f|
     .row
       - if @propose_badge.errors.any?
         %h2
@@ -20,9 +20,9 @@
         .span3
           = f.label :value_id, 'Tag to a Value',
             class: 'request-form-label'
-          = f.collection_select :value_id, BadgesEngine::Value.all,
-            :id, :name, { prompt: 'Select a value' },
-            { class: 'request-form-input' }
+          = f.input :value_id, collection: BadgesEngine::Value.all,
+            value_method: :id, label_method: :name, promt: 'Select a Value',
+            class: 'request-form-input', label: false
       .col-sm-5
         .span5
           = f.label :description, 'Describe your Badge',
