Add styles for forms

--- a/app/assets/stylesheets/modules/request.sass
+++ b/app/assets/stylesheets/modules/request.sass
@@ -19,18 +19,26 @@
   display: none
 
 .request-form-nominee
+  +request-title
   background: $gray-lighter
+  font-size: 1em
   padding: 25px 15px
   display: none
+  select
+    color: $gray-light
 
 .request-propose
   background: $pink-25
   display: none
 
 .request-form-propose
+  +request-title
   background: $gray-lighter
-  padding: 25px 15px
   display: none
+  font-size: 1em
+  padding: 25px 15px
+  select
+    color: $gray-light
 
 .request-nominee-title
   +request-title
