Add effect to badges
* Fix styles for badges
* Fix html markup

--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -3,6 +3,19 @@
   font-size: 1em
   font-weight: 400
 
+= badges_container($width, $columns)
+  border-bottom: 1px solid $white
+  border-right: 1px solid $white
+  float: left
+  height: 175px
+  overflow: hidden
+  text-align: center
+  width: $width
+  &:nth-of-type("#{ $columns }n")
+    border-right: none
+  img
+    position: relative
+
 .badges
   background-color: $white
 
@@ -54,56 +67,50 @@
 .badges-first-link
   +badges_links($orange-dark)
 
-// ==================================
-
 .badges-all
   border-top: 1px solid $white
+  overflow: auto
 
 .badge-info
-  border-bottom: 1px solid $white
-  border-right: 1px solid $white
-  float: left
-  height: 210px
-  overflow: hidden
-  text-align: center
-  width: 20%
-  //&:last
-    //border-right: none
+  +badges_container(20%, 5)
+
+.badge-info-6-col
+  +badges_container(16.66%, 6)
+  .badge-info-inside
+    top: -14px
+    &:hover
+      top: -152px
 
 .badge-info-inside
   cursor: pointer
-  margin-top: 0px
-  transition: margin-top 0.5s linear
+  position: relative
+  top: 0
+  transition: top 0.5s linear
   &:hover
-    margin-top: -175px
-    .badge-description
+    top: -138px
+    .badge-description, .badge-details-link
       opacity: 1
 
 .badge-description
-  height: 140px
+  background-color: rgba(255, 255, 255, 0.9)
+  height: 100px
   opacity: 0
   overflow: hidden
   transition: opacity 1s
 
 .badge-details-link
+  background-color: rgba(255, 255, 255, 0.9)
   color: $orange
   display: block
+  padding: 13px 0 5px
   text-decoration: underline
-  padding: 8px
-
-//.badge-info-6-col
-  //border-bottom: 1px solid $white
-  //border-right: 1px solid $white
-  //float: left
-  //text-align: center
-  //width: 16.66%
-  //&:nth-of-type(6)
-    //border-right: none
+  transition: opacity 1s
+  opacity: 0
 
 .badge-name
-  margin: 10px 0
-
-// ==================================
+  background-color: rgba(255, 255, 255, 0.5)
+  margin: -36px 0 0
+  padding: 10px 0
 
 .badges-footer
   background: image_url('sprite-badges.png') -15px -650px no-repeat
