--- a/app/views/shared/_user.html.haml
+++ b/app/views/shared/_user.html.haml
@@ -3,6 +3,6 @@
     = image_tag user.picture_url
     = link_to user_path(user) do
       = user.name
-  %td= user.position_name
+  %td= user.position
   %td
     = link_to 'Edit', edit_user_path(user)
