--- a/app/views/shared/_user_details.html.haml
+++ b/app/views/shared/_user_details.html.haml
@@ -1,5 +1,5 @@
 .user-info
   .picture= profile_picture
   .name= current_user.name
-  .position= current_user.position_name
+  .position= current_user.position
 
