--- a/app/views/admin/users/_header.html.haml
+++ b/app/views/admin/users/_header.html.haml
@@ -3,5 +3,5 @@
     = image_tag user.picture_url
     = link_to user_path(user) do
       = user.name
-  %td= user.position_name
+  %td= user.position
   %td= link_to 'Edit', edit_user_path(user)
